--- a/html2-master 2/exercise1.html
+++ b/html2-master 2/exercise1.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet"type="text/css" href="style.css">
     </head>
     <body>
-        <h1>Make me blue!</h1>
+        <h1>Make me red!</h1>
 
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
 
